tests/NormalTests/paczka1/small_fuzzy/45201024.err
Error in line 5: qi5183w A712 68,1
Error in line 4: fF4JKi7Mr A750 76,5
Error in line 10: 2nFnBNT0 A750 58,1
